# project_vending-machine

./: .gitignore  CMakeLists.txt  DevelopmentList.txt  ProgressChart.pages  README.md  ToDoList.txt
include/: algo.hpp  algo_LinkedList.hpp  algo_Queue.hpp  algo_Stack.hpp  data.hpp  data_Cash.hpp  data_Coin.hpp  data_DataManagement.hpp  data_Drink.hpp  gui.hpp  gui_AdministratorPage.hpp  gui_LoginPage.hpp  gui_MainPage.hpp  gui_client.hpp  gui_client_AdministratorPage.hpp  gui_client_LoginPage.hpp  gui_client_MainPage.hpp  gui_client_functions.hpp  gui_functions.hpp  gui_server.hpp  gui_server_AdministratorPage.hpp  gui_server_ListPage.hpp  gui_server_functions.hpp  network.hpp  network_Pipe.hpp  network_Socket.hpp  network_client.hpp  network_server.hpp  util.hpp
lib/: CMakeLists.txt  data_DataManagement.cpp  gui_AdministratorPage.cpp  gui_AdministratorPage_func.cpp  gui_LoginPage.cpp  gui_LoginPage_cons.cpp  gui_LoginPage_func.cpp  gui_MainPage.cpp  gui_MainPage_func.cpp  gui_client_AdministratorPage.cpp  gui_client_LoginPage.cpp  gui_client_MainPage.cpp  gui_client_functions.cpp  gui_functions.cpp  gui_server_AdministratorPage.cpp  gui_server_ListPage.cpp  gui_server_functions.cpp  network_client.cpp  network_server.cpp  util.cpp
src/: CMakeLists.txt  main.cpp
src_client/: CMakeLists.txt  main.cpp
src_client_io/: test_data.txt
src_io/: test.txt  test_data.txt
src_server/: CMakeLists.txt  main.cpp
src_server_io/: test_data.txt
